<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.academiamoviles.distrack.activities.DetalleTareaActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/cabecera"
        android:gravity="center"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:gravity="center_horizontal"
        android:text="Detalle"
        android:textColor="#ffffff"
        android:textSize="40sp" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginEnd="36dp"
            android:layout_marginStart="36dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/labelclientecardviewtarea"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/labeldetalletarea" />

                <TextView
                    android:id="@+id/tareaCliente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margenlabelvalorcardviewtarea"
                    android:textSize="@dimen/valordetalletarea" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/labeldocumentocardviewtarea"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/labeldetalletarea" />

                <TextView
                    android:id="@+id/tareaDocumento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margenlabelvalorcardviewtarea"
                    android:textSize="@dimen/valordetalletarea" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/labelvolumencardviewtarea"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/labeldetalletarea" />

                <TextView
                    android:id="@+id/tareaVolumen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margenlabelvalorcardviewtarea"
                    android:textSize="@dimen/valordetalletarea" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/labelpesocardviewtarea"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/labeldetalletarea" />

                <TextView
                    android:id="@+id/tareaPeso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margenlabelvalorcardviewtarea"
                    android:textSize="@dimen/valordetalletarea" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/labeldireccioncardviewtarea"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/labeldetalletarea" />

                <TextView
                    android:id="@+id/tareaDircliente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margenlabelvalorcardviewtarea"
                    android:textSize="@dimen/valordetalletarea" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/labelplanillacardviewtarea"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/labeldetalletarea" />

                <TextView
                    android:id="@+id/tareaPlanillla"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margenlabelvalorcardviewtarea"
                    android:textSize="@dimen/valordetalletarea" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
