<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.academiamoviles.distrack.activities.ActualizarPendienteActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/cabecera"
        android:gravity="center"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:gravity="center_horizontal"
        android:text="Detalle"
        android:textColor="#ffffff"
        android:textSize="40sp" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="56dp">



        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout0"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.027">




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/labelclientecardviewtarea"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/labeldetalletarea" />

                    <TextView
                        android:id="@+id/tareaCliente"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margenlabelvalorcardviewtarea"
                        android:textSize="@dimen/valordetalletarea" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/labeldocumentocardviewtarea"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/labeldetalletarea" />

                    <TextView
                        android:id="@+id/tareaDocumento"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margenlabelvalorcardviewtarea"
                        android:textSize="@dimen/valordetalletarea" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/labelvolumencardviewtarea"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/labeldetalletarea" />

                    <TextView
                        android:id="@+id/tareaVolumen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margenlabelvalorcardviewtarea"
                        android:textSize="@dimen/valordetalletarea" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/labelpesocardviewtarea"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/labeldetalletarea" />

                    <TextView
                        android:id="@+id/tareaPeso"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margenlabelvalorcardviewtarea"
                        android:textSize="@dimen/valordetalletarea" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/labeldireccioncardviewtarea"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/labeldetalletarea" />

                    <TextView
                        android:id="@+id/tareaDircliente"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margenlabelvalorcardviewtarea"
                        android:textSize="@dimen/valordetalletarea" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/labelplanillacardviewtarea"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/labeldetalletarea" />

                    <TextView
                        android:id="@+id/tareaPlanillla"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margenlabelvalorcardviewtarea"
                        android:textSize="@dimen/valordetalletarea" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:id="@+id/linearLayout0"
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:padding="4dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/cardView3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <EditText
                android:id="@+id/editTextQuery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_centerHorizontal="true"
                android:background="#F2F2F2"
                android:hint="Codigo promotor"
                android:padding="15dp"
                android:textColorHint="#000"
                android:textStyle="bold|italic"
                />
            <Button
                android:id="@+id/iniciarButtonFind"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_iniciar"
                android:text="Buscar"
                android:textColor="@color/colorPrimaryDark" />


        </LinearLayout>


        <android.support.v7.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:baselineAligned="false">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:padding="4dp">

                    <TextView
                        android:id="@+id/actualizarPendienteNFoto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="4dp"
                        android:layout_toStartOf="@+id/actualizarPendienteFoto"
                        android:text="0 fotos"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />

                    <ImageView
                        android:id="@+id/actualizarPendienteFoto"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentTop="true"
                        android:src="@drawable/icon_camara" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:padding="4dp">

                    <TextView
                        android:id="@+id/actualizarFirmaText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="4dp"
                        android:layout_toStartOf="@+id/actualizarFirma"
                        android:text="Firma"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />

                    <ImageView
                        android:id="@+id/actualizarFirma"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentTop="true"
                        android:src="@drawable/icon_firma"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />
                </RelativeLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:id="@+id/linearLayout2"
            style="?android:attr/buttonBarStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:padding="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <Button
                android:id="@+id/iniciarButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_iniciar"
                android:text="Iniciar"
                android:textColor="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/retornarButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_retornar"
                android:text="Retornar"
                android:textColor="#ffff" />
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</LinearLayout>
